--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             </div>
         </div>
 
-        <script src="src/index.js"></script>
+        <script type="module" src="src/index.js"></script>
     </body>
 </html>
