--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
             </div>
         </div>
 
-        <script type="module" src="src/index.js"></script>
+        <script src="./src/index.js" type="text/javascript"></script>
     </body>
 </html>
