--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./src/styles.css" type="text/css" />
+        <link rel="stylesheet" href="./styles.css" type="text/css" />
     </head>
     <body>
         <div class="calc">
@@ -33,9 +33,10 @@
                     <div class="button">=</div>
                     <div class="button">-</div>
                 </div>
+                <div class="addButton">add operation</div>
             </div>
         </div>
 
-        <script src="./src/index.js" type="text/javascript"></script>
+        <script src="./index.js" type="text/javascript"></script>
     </body>
 </html>
