add custom operations

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="button">=</div>
                     <div class="button">-</div>
                 </div>
-                <div class="addButton">add operation</div>
+                <div id="customOperationBlock" class="row customOperationsBlock"></div>
             </div>
         </div>
 
