--- a/task_7/index.html
+++ b/task_7/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./styles.css" type="text/css" />
     </head>
     <body>
         <div class="calc">
@@ -32,9 +33,10 @@
                     <div class="button">=</div>
                     <div class="button">-</div>
                 </div>
+                <div id="customOperationBlock" class="row customOperationsBlock"></div>
             </div>
         </div>
 
-        <script src="index.js"></script>
+        <script src="./index.js" type="text/javascript"></script>
     </body>
 </html>
