--- a/task_9/index.html
+++ b/task_9/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <input type="text" name="input" id="gifInput">
+        <div id="gifs"></div>
 
         <script src="./script.js" type="text/javascript"></script>
     </body>
