--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <meta charset="UTF-8">
-<script defer src="main.b1880f4ff677b584149b.js"></script><link href="styles.b1880f4ff677b584149b.css" rel="stylesheet"></head>
+<script defer src="./dist/main.b1880f4ff677b584149b.js"></script><link href="./dist/styles.b1880f4ff677b584149b.css" rel="stylesheet"></head>
 <body>
 <div id="dialog" title="SELECT FIGURE" hidden>
     <button class="button" id="knight">KNIGHT</button>
