--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
     <button class="button" id="queen">QUEEN</button>
     <button class="button" id="bishop">BISHOP</button>
 </div>
+<span id="p1"></span>
+<span> | </span>
+<span id="p2"></span>
 <table class="chess-board" id="field">
     <tbody>
     <tr>
